--- a/functions/package.json
+++ b/functions/package.json
@@ -15,11 +15,14 @@
   "main": "index.js",
   "dependencies": {
     "firebase-admin": "^9.2.0",
-    "firebase-functions": "^3.11.0"
+    "firebase-functions": "^3.11.0",
+    "googleapis": "^67.0.0",
+    "nodemailer": "^6.4.17"
   },
   "devDependencies": {
     "eslint": "^7.6.0",
     "eslint-config-google": "^0.14.0",
+    "eslint-plugin-promise": "^4.2.1",
     "firebase-functions-test": "^0.2.0"
   },
   "private": true
