--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@testing-library/user-event": "^12.6.0",
     "firebase": "^8.2.2",
     "gh-pages": "^3.1.0",
+    "googleapis": "^67.0.0",
     "moment": "^2.29.1",
     "node-sass": "^4.14.1",
+    "nodemailer": "^6.4.17",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
